--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
           <li style="display:inline-block;">
             <a href="https://codepen.io/Hyperplexed/full/rNrJgrd"><h3>source</h3></a>
           </li>
+          <li style="display:inline-block">
+            <h3> | </h3>
+          </li>
+          <li style="display:inline-block;">
+            <a href="https://old.hellyy.ml/"><h3>old</h3></a>
+          </li>
         </ul>
       </div>
     </footer>
