--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="center-content d-flex justify-content-md-center">
       <div class="container">
         <div class="head d-flex justify-content-md-center">
-          <h1 data-value="HELLY">HELLY</h1>
+          <h1 data-value="INVITEDTOHELL">HELLY</h1>
         </div>
 
         <div class="tree d-flex justify-content-md-center">
