--- a/ohayo.html
+++ b/ohayo.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HELLY</title>
+    <title>OHAYO</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +14,7 @@
     <div class="center-content d-flex justify-content-md-center">
       <div class="container">
         <div class="head d-flex justify-content-md-center">
-          <h1 data-value="OHAYO">OHAYO</h1>
+          <h1 data-value="OHAYO">c:</h1>
         </div>
 
         <div class="tree d-flex justify-content-md-center">
