--- a/ohayo.html
+++ b/ohayo.html
@@ -14,7 +14,7 @@
     <div class="center-content d-flex justify-content-md-center">
       <div class="container">
         <div class="head d-flex justify-content-md-center">
-          <h1 data-value="c:">OHAYO</h1>
+          <h1 data-value="OHAYO">おはようツ</h1>
         </div>
 
         <div class="tree d-flex justify-content-md-center">
@@ -37,21 +37,11 @@
     <footer>
       <div class="text-foot d-flex justify-content-md-center">
         <ul>
-          <li style="display:inline-block;">
-            <a href="https://github.com/catppuccin/"><h3>palette</h3></a>
-          </li>
-          <li style="display:inline-block">
-            <h3> | </h3>
-          </li>
+          
           <li style="display:inline-block;">
             <a href="https://codepen.io/Hyperplexed/full/rNrJgrd"><h3>source</h3></a>
           </li>
-          <li style="display:inline-block">
-            <h3> | </h3>
-          </li>
-          <li style="display:inline-block;">
-            <a href="https://old.hellyy.ml/"><h3>old</h3></a>
-          </li>
+          
         </ul>
       </div>
     </footer>
