--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
       <div class="text-foot d-flex justify-content-md-center">
         <ul>
           <li style="display:inline-block;">
-            <a href="https://github.com/catppuccin/"><h3>palette</h3></a>
+            <a href="https://github.com/catppuccin/"><h3 class="palette">palette</h3></a>
           </li>
           <li style="display:inline-block">
             <h3> | </h3>
           </li>
           <li style="display:inline-block;">
-            <a href="https://codepen.io/Hyperplexed/full/rNrJgrd"><h3>source</h3></a>
+            <a href="https://codepen.io/Hyperplexed/full/rNrJgrd"><h3 class="source">source</h3></a>
           </li>
           <li style="display:inline-block">
             <h3> | </h3>
           </li>
           <li style="display:inline-block;">
-            <a href="https://old.hellyy.ml/"><h3>old</h3></a>
+            <a href="https://old.hellyy.ml/"><h3 class="old">old</h3></a>
           </li>
         </ul>
       </div>
@@ -63,7 +63,10 @@
     const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
 
     let interval = null;
-
+    document.querySelector("h1").onmouseover = event2 =>{
+      document.getElementById("danger").classList.remove("invisible");
+      document.getElementById("danger").classList.add("visible");
+    }
 
     document.querySelector("h1").onmouseover = event => {  
       let iteration = 0;
@@ -86,7 +89,7 @@
           clearInterval(interval);
         }
         
-        iteration += 1 / 3;
+        iteration += 1 / 15;
       }, 30);
     }
 
