--- a/ohayo.html
+++ b/ohayo.html
@@ -28,6 +28,14 @@
             <li>
               <a class="tlg" href="https://www.youtube.com/channel/UCjsbCJFYYr-RR5GUNRbqBDA">youtube</a>
             </li>
+          </li>
+          <li>
+            <a class="tlg" href="https://discord.gg/CQvMQke3vs">discord</a>
+          </li>
+        </li>
+        <li>
+          <a class="tlg" href="https://myanimelist.net/animelist/TheRealOHAYO">anime</a>
+        </li>
           </ul>
         </div>
       </div>
