--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <li>
               <a class="mail" href="mailto:info@hellyy.ml">email</a>
             </li>
+			<li>
+              <a class="planetminecraft" href="https://www.planetminecraft.com/member/invitedtoheaven/">planetminecraft</a>
+            </li>
           </ul>
         </div>
       </div>
