--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a class="mail" href="mailto:info@hellyy.ml">email</a>
             </li>
 			<li>
-              <a class="planetminecraft" href="https://www.planetminecraft.com/member/invitedtoheaven/">planetminecraft</a>
+              <a class="planetminecraft" href="https://www.planetminecraft.com/member/invitedtoheaven/">planetmc</a>
             </li>
           </ul>
         </div>
