New tab for links

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
         <div class="tree d-flex justify-content-md-center">
           <ul class="linktree">
             <li>
-              <a class="gh" href="https://github.com/InvitedToHell">github</a>
+              <a class="gh" href="https://github.com/InvitedToHell" target="_blank">github</a>
             </li>
             <li>
-              <a class="twt" href="https://twitter.com/InvitedToHell">twitter</a>
+              <a class="twt" href="https://twitter.com/InvitedToHell" target="_blank">twitter</a>
             </li>
             <li>
-              <a class="tlg" href="https://t.me/invitedtohell">telegram</a>
+              <a class="tlg" href="https://t.me/invitedtohell" target="_blank">telegram</a>
             </li>
             <li>
-              <a class="mail" href="mailto:info@hellyy.ml">email</a>
+              <a class="mail" href="mailto:info@hellyy.ml" target="_blank">email</a>
             </li>
 			<li>
-              <a class="planetminecraft" href="https://www.planetminecraft.com/member/invitedtoheaven/">planetmc</a>
+              <a class="planetminecraft" href="https://www.planetminecraft.com/member/invitedtoheaven/" target="_blank">planetmc</a>
             </li>
           </ul>
         </div>
@@ -48,19 +48,19 @@
       <div class="text-foot d-flex justify-content-md-center">
         <ul>
           <li style="display:inline-block;">
-            <a href="https://github.com/catppuccin/"><h3 class="palette">palette</h3></a>
+            <a href="https://github.com/catppuccin/" target="_blank"><h3 class="palette">palette</h3></a>
           </li>
           <li style="display:inline-block">
             <h3> | </h3>
           </li>
           <li style="display:inline-block;">
-            <a href="https://codepen.io/Hyperplexed/full/rNrJgrd"><h3 class="source">source</h3></a>
+            <a href="https://codepen.io/Hyperplexed/full/rNrJgrd" target="_blank"><h3 class="source">source</h3></a>
           </li>
           <li style="display:inline-block">
             <h3> | </h3>
           </li>
           <li style="display:inline-block;">
-            <a href="https://old.hellyy.ml/"><h3 class="old">old</h3></a>
+            <a href="https://old.hellyy.ml/" target="_blank"><h3 class="old">old</h3></a>
           </li>
         </ul>
       </div>
