--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
 
-    <div id="blob"></div>
-    <div id="blur"></div>
+    <div id="blob" class="blur"></div>
+    <div id="blur" class="blur"></div>
 
     <div class="center-content d-flex justify-content-md-center">
       <div class="container">
